--- a/tt.ipynb
+++ b/tt.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(123456789)"
+    "print(123456789)\n",
+    "class A:\n",
+    "    def __init__(self):\n",
+    "        pass"
    ]
   }
  ],
