--- a/tt.ipynb
+++ b/tt.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('123456789')\n",
+    "print(123)\n",
     "class A:\n",
     "    def __init__(self):\n",
     "        a = 1\n",
